@@ -17,7 +17,6 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.hl7.fhir.instance.model.api.IBase;
 import org.hl7.fhir.instance.model.api.IBaseBackboneElement;
 import org.hl7.fhir.instance.model.api.IBaseExtension;
@@ -205,6 +204,14 @@ public class TestItemGenerator {
             return this;
         }
 
+        public GeneratedItem itemHasExtractionValueExtension(String linkId) {
+            var item = items.get(linkId);
+            assertNotNull(item);
+            assertTrue(item.getExtension().stream()
+                    .anyMatch(e -> e.getUrl().equals(Constants.SDC_QUESTIONNAIRE_DEFINITION_EXTRACT_VALUE)));
+            return this;
+        }
+
         public GeneratedItem hasId(String expectedId) {
             assertEquals(expectedId, questionnaire.getIdElement().getIdPart());
             return this;
@@ -225,7 +232,7 @@ public class TestItemGenerator {
                             return false;
                         }
                     })
-                    .collect(Collectors.toList());
+                    .toList();
             assertEquals(count, launchContextExts.size());
             return this;
         }
