@@ -8,6 +8,8 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.isNull;
+import static org.mockito.Mockito.doAnswer;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -15,9 +17,11 @@ import static org.opencds.cqf.fhir.utility.r4.Parameters.parameters;
 import static org.opencds.cqf.fhir.utility.r4.Parameters.part;
 
 import ca.uhn.fhir.context.FhirContext;
+import ca.uhn.fhir.context.FhirVersionEnum;
 import ca.uhn.fhir.parser.IParser;
 import ca.uhn.fhir.rest.server.exceptions.PreconditionFailedException;
 import ca.uhn.fhir.rest.server.exceptions.UnprocessableEntityException;
+import jakarta.annotation.Nullable;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
@@ -25,7 +29,7 @@ import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Optional;
 import java.util.concurrent.ThreadLocalRandom;
-import java.util.stream.Collectors;
+import java.util.function.Predicate;
 import org.hl7.fhir.r4.model.Bundle;
 import org.hl7.fhir.r4.model.Bundle.BundleEntryComponent;
 import org.hl7.fhir.r4.model.Bundle.BundleType;
@@ -43,15 +47,25 @@ import org.hl7.fhir.r4.model.ValueSet.ValueSetExpansionComponent;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
 import org.mockito.Mockito;
+import org.mockito.internal.stubbing.defaultanswers.ReturnsDeepStubs;
+import org.mockito.invocation.InvocationOnMock;
+import org.mockito.stubbing.Answer;
 import org.opencds.cqf.fhir.api.Repository;
 import org.opencds.cqf.fhir.cr.visitor.IValueSetExpansionCache;
 import org.opencds.cqf.fhir.cr.visitor.PackageVisitor;
 import org.opencds.cqf.fhir.utility.Constants;
+import org.opencds.cqf.fhir.utility.adapter.IAdapterFactory;
+import org.opencds.cqf.fhir.utility.adapter.IEndpointAdapter;
 import org.opencds.cqf.fhir.utility.adapter.ILibraryAdapter;
+import org.opencds.cqf.fhir.utility.adapter.IParametersAdapter;
+import org.opencds.cqf.fhir.utility.adapter.IValueSetAdapter;
 import org.opencds.cqf.fhir.utility.adapter.r4.AdapterFactory;
 import org.opencds.cqf.fhir.utility.adapter.r4.LibraryAdapter;
 import org.opencds.cqf.fhir.utility.adapter.r4.ValueSetAdapter;
+import org.opencds.cqf.fhir.utility.client.TerminologyServerClient;
 import org.opencds.cqf.fhir.utility.repository.InMemoryFhirRepository;
 
 class PackageVisitorTests {
@@ -89,7 +103,7 @@ class PackageVisitorTests {
                                                 .getValueSet()
                                                 .size()
                                         == 0))
-                .collect(Collectors.toList());
+                .toList();
 
         // Ensure expansion is populated for all leaf value sets
         leafValueSets.forEach(valueSet -> assertNotNull(valueSet.getExpansion()));
@@ -114,8 +128,13 @@ class PackageVisitorTests {
         assertTrue(exception.getMessage().contains("Cannot expand ValueSet without a terminology server: "));
     }
 
-    @Test
-    void packageOperation_should_fail_credentials_missing_username() {
+    @ParameterizedTest
+    @CsvSource({
+        ",some-api-key,Cannot expand ValueSet without VSAC Username.",
+        "someUsername,,Cannot expand ValueSet without VSAC API Key.",
+        "someUsername,some-api-key,Terminology Server expansion failed for ValueSet "
+    })
+    void packageOperation_should_fail(@Nullable String username, String apiKey, String expectedError) {
         Bundle loadedBundle = (Bundle) jsonParser.parseResource(
                 PackageVisitorTests.class.getResourceAsStream("Bundle-ersd-small-active.json"));
         repo.transaction(loadedBundle);
@@ -124,57 +143,15 @@ class PackageVisitorTests {
                 .copy();
         ILibraryAdapter libraryAdapter = new AdapterFactory().createLibrary(library);
         Endpoint terminologyEndpoint = new Endpoint();
-        terminologyEndpoint.addExtension(Constants.VSAC_USERNAME, new StringType(null));
-        terminologyEndpoint.addExtension(Constants.APIKEY, new StringType("some-api-key"));
+        terminologyEndpoint.addExtension(Constants.VSAC_USERNAME, new StringType(username));
+        terminologyEndpoint.addExtension(Constants.APIKEY, new StringType(apiKey));
         Parameters params = parameters(part("terminologyEndpoint", terminologyEndpoint));
 
         var exception = assertThrows(UnprocessableEntityException.class, () -> {
             libraryAdapter.accept(packageVisitor, params);
         });
 
-        assertTrue(exception.getMessage().contains("Cannot expand ValueSet without VSAC Username."));
-    }
-
-    @Test
-    void packageOperation_should_fail_credentials_missing_apikey() {
-        Bundle loadedBundle = (Bundle) jsonParser.parseResource(
-                PackageVisitorTests.class.getResourceAsStream("Bundle-ersd-small-active.json"));
-        repo.transaction(loadedBundle);
-        PackageVisitor packageVisitor = new PackageVisitor(repo);
-        Library library = repo.read(Library.class, new IdType("Library/SpecificationLibrary"))
-                .copy();
-        ILibraryAdapter libraryAdapter = new AdapterFactory().createLibrary(library);
-        Endpoint terminologyEndpoint = new Endpoint();
-        terminologyEndpoint.addExtension(Constants.VSAC_USERNAME, new StringType("someUsername"));
-        terminologyEndpoint.addExtension(Constants.APIKEY, new StringType(null));
-        Parameters params = parameters(part("terminologyEndpoint", terminologyEndpoint));
-
-        var exception = assertThrows(UnprocessableEntityException.class, () -> {
-            libraryAdapter.accept(packageVisitor, params);
-        });
-
-        assertTrue(exception.getMessage().contains("Cannot expand ValueSet without VSAC API Key."));
-    }
-
-    @Test
-    void packageOperation_should_fail_credentials_invalid() {
-        Bundle loadedBundle = (Bundle) jsonParser.parseResource(
-                PackageVisitorTests.class.getResourceAsStream("Bundle-ersd-small-active.json"));
-        repo.transaction(loadedBundle);
-        PackageVisitor packageVisitor = new PackageVisitor(repo);
-        Library library = repo.read(Library.class, new IdType("Library/SpecificationLibrary"))
-                .copy();
-        ILibraryAdapter libraryAdapter = new AdapterFactory().createLibrary(library);
-        Endpoint terminologyEndpoint = new Endpoint();
-        terminologyEndpoint.addExtension(Constants.VSAC_USERNAME, new StringType("someUsername"));
-        terminologyEndpoint.addExtension(Constants.APIKEY, new StringType("some-api-key"));
-        Parameters params = parameters(part("terminologyEndpoint", terminologyEndpoint));
-
-        var exception = assertThrows(UnprocessableEntityException.class, () -> {
-            libraryAdapter.accept(packageVisitor, params);
-        });
-
-        assertTrue(exception.getMessage().contains("Terminology Server expansion failed for ValueSet "));
+        assertTrue(exception.getMessage().contains(expectedError));
     }
 
     @Test
@@ -232,7 +209,7 @@ class PackageVisitorTests {
         List<MetadataResource> updatedResources = updatedCanonicalVersionPackage.getEntry().stream()
                 .map(entry -> (MetadataResource) entry.getResource())
                 .filter(resource -> resource.getUrl().contains("to-add-missing-version"))
-                .collect(Collectors.toList());
+                .toList();
         assertEquals(2, updatedResources.size());
         for (MetadataResource updatedResource : updatedResources) {
             assertEquals(updatedResource.getVersion(), versionToUpdateTo);
@@ -404,7 +381,7 @@ class PackageVisitorTests {
             Bundle packaged = (Bundle) libraryAdapter.accept(packageVisitor, params);
             List<MetadataResource> resources = packaged.getEntry().stream()
                     .map(entry -> (MetadataResource) entry.getResource())
-                    .collect(Collectors.toList());
+                    .toList();
             for (MetadataResource resource : resources) {
                 Boolean noExtraResourcesReturned =
                         includedTypeURLs.getValue().stream().anyMatch(url -> url.equals(resource.getUrl()));
@@ -419,7 +396,7 @@ class PackageVisitorTests {
     }
 
     @Test
-    public void packageVisitorShouldUseExpansionCacheIfProvided() {
+    void packageVisitorShouldUseExpansionCacheIfProvided() {
         // Arrange
         var bundle = (Bundle) jsonParser.parseResource(
                 PackageVisitorTests.class.getResourceAsStream("Bundle-ersd-small-active.json"));
@@ -428,7 +405,7 @@ class PackageVisitorTests {
                 .copy();
         var libraryAdapter = new AdapterFactory().createLibrary(library);
         var mockCache = Mockito.mock(IValueSetExpansionCache.class);
-        var packageVisitor = new PackageVisitor(repo, mockCache);
+        var packageVisitor = new PackageVisitor(repo, null, mockCache);
 
         var canonical1 = "http://cts.nlm.nih.gov/fhir/ValueSet/123-this-will-be-routine|20210526";
         var mockValueSetAdapter1 = Mockito.mock(ValueSetAdapter.class);
@@ -454,5 +431,55 @@ class PackageVisitorTests {
         // the other two will be added to the cache after expansion if possible
         verify(mockCache, times(2)).addToCache(any(), isNull());
         verify(mockCache, times(1)).getExpansionParametersHash(any(LibraryAdapter.class));
+    }
+
+    @Test
+    void fallback_to_tx_server_if_valueset_missing_locally() {
+        final var leafOid = "2.16.840.1.113762.1.4.1146.6";
+        final var authoritativeSource = "http://cts.nlm.nih.gov/fhir/";
+        var bundle = (Bundle) jsonParser.parseResource(
+                ReleaseVisitorTests.class.getResourceAsStream("Bundle-ersd-small-active.json"));
+        Predicate<BundleEntryComponent> leafFinder = e -> e.getResource().getResourceType() == ResourceType.ValueSet
+                && ((ValueSet) e.getResource()).getUrl().contains(leafOid);
+        // remove leaf from bundle
+        var leafEntry = bundle.getEntry().stream().filter(leafFinder).findFirst();
+        var missingVset = leafEntry.map(e -> (ValueSet) e.getResource()).get();
+        bundle.getEntry().remove(leafEntry.get());
+
+        repo.transaction(bundle);
+        var library = repo.read(Library.class, new IdType("Library/SpecificationLibrary"))
+                .copy();
+        var endpoint = createEndpoint(authoritativeSource);
+
+        var clientMock = mock(TerminologyServerClient.class, new ReturnsDeepStubs());
+        // expect the Tx Server to provide the missing ValueSet
+        when(clientMock.getResource(any(IEndpointAdapter.class), any(), any())).thenReturn(Optional.of(missingVset));
+        doAnswer(new Answer<ValueSet>() {
+                    @Override
+                    public ValueSet answer(InvocationOnMock invocation) throws Throwable {
+                        return new ValueSet(); // Return a new instance of ValueSet
+                    }
+                })
+                .when(clientMock)
+                .expand(any(IValueSetAdapter.class), any(IEndpointAdapter.class), any(IParametersAdapter.class));
+        var packageVisitor = new PackageVisitor(repo, clientMock);
+        var libraryAdapter = new AdapterFactory().createLibrary(library);
+        var params = parameters(part("terminologyEndpoint", (org.hl7.fhir.r4.model.Endpoint) endpoint.get()));
+        // create package
+        var packagedBundle = (Bundle) libraryAdapter.accept(packageVisitor, params);
+        var containsVset = packagedBundle.getEntry().stream().anyMatch(leafFinder);
+        // check for ValueSet
+        assertTrue(containsVset);
+    }
+
+    private IEndpointAdapter createEndpoint(String authoritativeSource) {
+        var factory = IAdapterFactory.forFhirVersion(FhirVersionEnum.R4);
+        var endpoint = factory.createEndpoint(new org.hl7.fhir.r4.model.Endpoint());
+        endpoint.setAddress(authoritativeSource);
+        endpoint.addExtension(new org.hl7.fhir.r4.model.Extension(
+                Constants.VSAC_USERNAME, new org.hl7.fhir.r4.model.StringType("username")));
+        endpoint.addExtension(new org.hl7.fhir.r4.model.Extension(
+                Constants.APIKEY, new org.hl7.fhir.r4.model.StringType("password")));
+        return endpoint;
     }
 }
